--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Easycalculation: calculation becone easy now</title>
     <link rel="shortcut icon" href="/icon/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css file/style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
             <div class="title">Easycalculation.com</div>
             <ul class="nav">
 
-                <li class="navItem"><a href="#">Home</a></li>
+                <li class="navItem"><a href="/index.html">Home</a></li>
                 <li class="navItem">
                     <a href="#" id="tools"> Other Tools</a>
                     <ul class="drop" id="dropdown">
@@ -38,7 +38,7 @@
         </div>
     </nav>
     <section class="mainBox">
-        <div class="other">
+        <div class="other" id="root">
             <div id="time_zone">
                 <div id="date"></div>
                 <div id="time"></div>
@@ -50,26 +50,26 @@
                     <p class="heading"><a href="#"> Finentials</a></p>
 
                     <ul>
-                        <li class="item"><a href="#"> Loan Calculator </a></li>
-                        <li class="item"><a href="#"> Auto Loan Calculator</a></li>
-                        <li class="item"><a href="#"> Interest Calculator</a></li>
-                        <li class="item"><a href="#"> Payment Calculator</a></li>
-                        <li class="item"><a href="#"> Retirement Calculator</a></li>
-                        <li class="item"><a href="#"> Amortization Calculator</a></li>
-                        <li class="item"><a href="#"> Investment Calculator</a></li>
-                        <li class="item"><a href="#"> Inflation Calculator</a></li>
-                        <li class="item"><a href="#"> Finance Calculator</a></li>
-                        <li class="item"><a href="#"> Income Tax Calculator</a></li>
-                        <li class="item"><a href="#"> Compound Interest Calculator</a></li>
-                        <li class="item"><a href="#"> Salary Calculator</a></li>
-                        <li class="item"><a href="#"> Interest Rate Calculator</a></li>
-                        <li class="item"><a href="#"> Sales Tax Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Loan Calculator </a></li>
+                        <li class="item"><a href="#" target="_blank"> Auto Loan Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Interest Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Payment Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Retirement Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Amortization Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Investment Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Inflation Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Finance Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Income Tax Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Compound Interest Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Salary Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Interest Rate Calculator</a></li>
+                        <li class="item"><a href="#" target="_blank"> Sales Tax Calculator</a></li>
                     </ul>
                 </div>
                 <div class="main_item">
                     <p class="heading"><a href="#">Mathmaticls</a></p>
                     <ul>
-                        <li class="item"><a href="#"> Percentage Calculator</a></li>
+                        <li class="item"><a href="/mathmaticles/percentage.html" target="_blank"> Percentage Calculator</a></li>
                         <li class="item"><a href="#"> Percent Error Calculator</a></li>
                         <li class="item"><a href="#"> Binary Calculator</a></li>
                         <li class="item"><a href="#"> Half-Life Calculator</a></li>
@@ -231,6 +231,7 @@
         <p class="footnot">copyright &copy; www.Easycalculation.com. All rights reserved 2022.</p>
     </footer>
     <script src="/index.js"></script>
+    <script src="/mathmaticles/percentage.js"></script>
 </body>
 
 </html>
