--- a/mathmaticles/percentage.html
+++ b/mathmaticles/percentage.html
@@ -172,7 +172,11 @@
         </div>
 
         <section class="blog none" id="material">
-            <embed src="/readable doc/percentage.pdf" type="application/pdf" width="100%" height="500px">
+            <object data="https://drive.google.com/file/d/1ZxNb-WpoHOvsp5QG6HPSNlSw1J3UUrDJ/view?usp=sharing" type="application/pdf" width="100%" height="550px">
+                <p class="center">Your web browser doesn't have a PDF plugin.
+                    Instead you can <a href="https://drive.google.com/file/d/1ZxNb-WpoHOvsp5QG6HPSNlSw1J3UUrDJ/view?usp=sharing" target="_blank">click here to
+                    download the PDF file.</a></p>
+            </object>
         </section>
 
         <footer class="footer">
