--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>Easycalculation: calculation becone easy now</title>
     <link rel="shortcut icon" href="/icon/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/css file/style.css">
+    <link rel="stylesheet" media="screen and (max-width:960px)" href="/phon css/home_phon.css">
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="navBox">
+    <nav class="navbar h-nav-resp" id="nav_br">
+        <div class="navBox" >
             <div class="title">Easycalculation.com</div>
-            <ul class="nav">
+            <ul class="nav v-resp" id="navbox">
 
                 <li class="navItem"><a href="/index.html">Home</a></li>
                 <li class="navItem">
@@ -29,12 +30,17 @@
                     </ul>
 
                 </li>
-                <li class="navItem"><a href="#" target="">Calculator</a></li>
+                <li class="navItem"><a href="/mathmaticles/simple_cal.html" target="">Calculator</a></li>
             </ul>
-            <form class="form-inline " id="nav_form">
+            <form class="form-inline v-resp " id="nav_form">
                 <input class="search_bx" type="search" placeholder="Search" aria-label="Search">
                 <button class="search_bx" id="search_btn" type="submit">Search</button>
             </form>
+        </div>
+        <div class="menu_bar" id="down_bar">
+            <div class="menu_logo"></div>
+            <div class="menu_logo"></div>
+            <div class="menu_logo"></div>
         </div>
     </nav>
     <section class="mainBox">
@@ -69,7 +75,8 @@
                 <div class="main_item">
                     <p class="heading"><a href="#">Mathmaticls</a></p>
                     <ul>
-                        <li class="item"><a href="/mathmaticles/percentage.html" target="_blank"> Percentage Calculator</a></li>
+                        <li class="item"><a href="/mathmaticles/percentage.html" target="_blank"> Percentage
+                                Calculator</a></li>
                         <li class="item"><a href="#"> Percent Error Calculator</a></li>
                         <li class="item"><a href="#"> Binary Calculator</a></li>
                         <li class="item"><a href="#"> Half-Life Calculator</a></li>
@@ -138,47 +145,7 @@
             </div>
         </div>
 
-        <div class="out_put">
-            <div class="container">
-                <div class="box">
-                    <input type="text" class="text" id="screen" placeholder="0.00">
-                </div>
-                <table id="cal_tab">
-                    <tr>
-                        <td><button class="btn_grp">(</button></td>
-                        <td><button class="btn_grp">)</button></td>
-                        <td><button class="btn_grp">C</button></td>
-                        <td><button class="btn_grp">-</button></td>
-                    </tr>
-                    <tr>
-                        <td><button class="btn_grp">7</button></td>
-                        <td><button class="btn_grp">8</button></td>
-                        <td><button class="btn_grp">9</button></td>
-                        <td><button class="btn_grp">X</button></td>
-                    </tr>
-                    <tr>
-                        <td><button class="btn_grp">4</button></td>
-                        <td><button class="btn_grp">5</button></td>
-                        <td><button class="btn_grp">6</button></td>
-                        <td><button class="btn_grp">%</button></td>
-                    </tr>
-                    <tr>
-                        <td><button class="btn_grp">1</button></td>
-                        <td><button class="btn_grp">2</button></td>
-                        <td><button class="btn_grp">3</button></td>
-                        <td><button class="btn_grp">+</button></td>
-                    </tr>
-                    <tr>
-                        <td><button class="btn_grp">0</button></td>
-                        <td><button class="btn_grp">.</button></td>
-                        <td><button class="btn_grp">/</button></td>
-                        <td><button class="btn_grp">=</button></td>
-                    </tr>
-
-
-                </table>
-            </div>
-        </div>
+        
         <div class="secondary">
 
         </div>
