--- a/mathmaticles/simple_cal.html
+++ b/mathmaticles/simple_cal.html
@@ -95,6 +95,6 @@
         </div>
         <p class="footnot">copyright &copy; www.Easycalculation.com. All rights reserved 2022.</p>
     </footer>
-
+ <script src="/index.js"></script>
 </body>
 </html>
