percentage page modification, and finalize

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul class="nav v-resp" id="navbox">
 
                 <li class="navItem"><a href="/index.html">Home</a></li>
+                <li class="navItem"><a href="#">Education</a></li>
                 <li class="navItem">
                     <a href="#" id="tools"> Other Tools</a>
                     <ul class="drop" id="dropdown">
