--- a/mathmaticles/simple_cal.html
+++ b/mathmaticles/simple_cal.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="out_put">
-        <div class="container">
+        <div class="section">
             <div class="box">
                 <input type="text" class="text" id="screen" placeholder="0.00">
             </div>
