--- a/mathmaticles/percentage.html
+++ b/mathmaticles/percentage.html
@@ -17,169 +17,176 @@
 <body>
     <nav class="navbar">
         <div class="navBox">
-            <div class="title">Easycalculation.com</div>
-            <ul class="nav" id="navbox">
+            <!-- <div class="title">Easycalculation.com</div> -->
+            <ul class="nav">
 
                 <li class="navItem"><a href="/index.html">Home</a></li>
                 <li class="navItem">
                     <a href="#">Sciencitific</a>
                     <a href="#">Finencial</a>
+                    <a href="#">Education</a>
                 </li>
 
             </ul>
 
         </div>
 
-        <div class="menu_bar" id="down_bar">
-            <div class="menu_logo"></div>
-            <div class="menu_logo"></div>
-            <div class="menu_logo"></div>
-        </div>
+
     </nav>
-    
+
     <div class="section_math">
-        <form class="form-inline " id="nav_form">
-            <input class="search_bx2" type="search" placeholder="Search" aria-label="Search">
-            <button class="search_bx2" id="search_btn2" type="submit">Search</button>
+        <form class="form-inline my-3 mx-3">
+            <input class="form-control mr-sm-1" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-success my-2 my-sm-0 btn-sm" type="submit">Search</button>
         </form>
-        <div class="cal_box">
-            <div class="card card_body">
-                <div class="card-header">
+        <div class="container-fluid">
+            <div class="card border-secondary">
+                <div class="card-header head_">
                     Percentage Calculator
                 </div>
                 <div class="card-body">
                     <div class="main my-3">
 
-                        <input type="text" class="form-control bdr-box  col-2 " id="val1">
-                        <div>percent of</div>
-                        <input type="text" class="form-control  bdr-box  col-2 " id="val2">
+                        <input type="text" class="form-control border-success col-sm-2" id="val1">
+                        <div>Percent of</div>
+                        <input type="text" class="form-control  border-success col-sm-2 " id="val2">
                         <div>is =</div>
-                        <input type="text" class="form-control  bdr-box  col-2" id="val3">
+                        <input type="text" class="form-control  border-success col-sm-4" id="val3">
 
                     </div>
-                    <a href="#" class="btn btn-success" id="result">Calculate</a>
-                    <a href="#" class="btn btn-outline-danger" id="delete">Clear</a>
+                    <button type="button" class="btn btn-success btn-sm" id="result">Calculate</button>
+                    <button type="button" class="btn btn-danger btn-sm" id="delete">Clear</button>
                     <!-- <a href="#" class="btn btn-dark " id="copy1">Copy result</a> -->
 
                 </div>
             </div>
 
 
-            <div class="cal_box">
-                <div class="card card_body">
-                    <div class="card-header">
-                        In other terms
-                    </div>
-                    <div class="card-body">
-                        <div class="main my-3">
 
-                            <input type="text" class="form-control  bdr-box  col-2 " id="val4">
-                            <div>is what % of</div>
-                            <input type="text" class="form-control  bdr-box  col-2 " id="val5">
-                            <div>=</div>
-                            <input type="text" class="form-control  bdr-box  col-2" id="val6">
+            <div class="card  border-secondary my-3">
+                <div class="card-header head_">
+                    In other terms
+                </div>
+                <div class="card-body">
+                    <div class="main my-3">
 
-                        </div>
-                        <a href="#" class="btn btn-success" id="result2">Calculate</a>
-                        <a href="#" class="btn btn-outline-danger " id="delete2">Clear</a>
-                        <!-- <a href="#" class="btn btn-dark " id="copy2">Copy result</a> -->
-
+                        <input type="text" class="form-control  border-success col-sm-3 " id="val4">
+                        <div>is-</div>
+                        <div>what %</div>
+                        <div>of</div>
+                        <input type="text" class="form-control  border-success col-sm-3 " id="val5">
+                        <div>=</div>
+                        <input type="text" class="form-control  border-success col-sm-4" id="val6">
 
                     </div>
+                    <button type="button" class="btn btn-success btn-sm" id="result2">Calculate</button>
+                    <button type="button" class="btn btn-danger  btn-sm" id="delete2">Clear</button>
+                    <!-- <a href="#" class="btn btn-dark " id="copy2">Copy result</a> -->
 
-                    <div class="card-body">
-                        <hr>
-                        <div class="main my-3">
 
-                            <input type="text" class="form-control  bdr-box  col-2 " id="val7">
-                            <div>is</div>
-                            <input type="text" class="form-control  bdr-box  col-2 " id="val8">
-                            <div>% of =</div>
-                            <input type="text" class="form-control  bdr-box  col-2" id="val9">
+                </div>
+            </div>
+            <div class="card  border-secondary">
+                <div class="card-header head_">
+                    In other terms
+                </div>
 
-                        </div>
-                        <a href="#" class="btn btn-success" id="result3">Calculate</a>
-                        <a href="#" class="btn btn-outline-danger" id="delete3">Clear</a>
-                        <!-- <a href="#" class="btn btn-dark " id="copy3">Copy result</a> -->
+                <div class="card-body">
+
+                    <div class="main my-3">
+
+                        <input type="text" class="form-control  border-success col-sm-3" id="val7">
+                        <div>is</div>
+                        <input type="text" class="form-control  border-success col-sm-3 " id="val8">
+                        <div>% of =</div>
+                        <input type="text" class="form-control  border-success col-sm-4" id="val9">
 
                     </div>
+                    <button type="button" class="btn btn-success btn-sm" id="result3">Calculate</button>
+                    <button type="button" class=" btn btn-danger  btn-sm" id="delete3">Clear</button>
+                    <!-- <a href="#" class="btn btn-dark " id="copy3">Copy result</a> -->
+
                 </div>
             </div>
         </div>
-        <div class="my-4 d_flex">
-            <p class="font">Wants to more about <strong>percentage</strong>, click the button below</p>
-            <button type="button" id="article">View pdf document</button>
-        </div>
 
-        <section class="blog none" id="material">
-            <object data="https://drive.google.com/file/d/1ZxNb-WpoHOvsp5QG6HPSNlSw1J3UUrDJ/view?usp=sharing" type="application/pdf" width="100%" height="550px">
-                <p class="center">Oops! It looks like your web browser doesn't have a PDF plugin.
-                  don't worry, instead you can <a href="https://drive.google.com/file/d/1ZxNb-WpoHOvsp5QG6HPSNlSw1J3UUrDJ/view?usp=sharing" target="_blank">click here to
+    </div>
+    <div class="my-4 d_flex">
+        <p class="font">Wants to know more about <strong>percentage!</strong> click the button below</p>
+        <button class="btn btn-toolbar btn-warning" type="button" id="article">View pdf document</button>
+    </div>
+
+    <section class="blog none" id="material">
+        <object data="https://drive.google.com/file/d/1ZxNb-WpoHOvsp5QG6HPSNlSw1J3UUrDJ/view?usp=sharing"
+            type="application/pdf" width="100%" height="550px">
+            <p class="center">Oops! It looks like your web browser doesn't have a PDF plugin.
+                don't worry, instead you can <a href="https://drive.google.com/file/d/1ZxNb-WpoHOvsp5QG6HPSNlSw1J3UUrDJ/view?usp=sharing"
+                    target="_blank">click here to
                     view the PDF file.</a></p>
-            </object>
-        </section>
+        </object>
+    </section>
 
-        <footer class="footer">
+    <footer class="footer">
 
-            <div class="footbox">
-                <div class="logoBox">
-                    <img id="brand" src="/image/132311731_887844135320376_6598073672727793761_n - Copy.jpg" alt="suraj">
-                    <p>Suraj Patel(CEO)</p>
-                    <div class="contact">
-                        <img src="/icon/email.png" alt="email" class="logo">
-                        <img src="/icon/place.png" alt="place" class="logo">
-                        <img src="/icon/phone.png" alt="phone" class="logo">
-                    </div>
-                </div>
-                <div class="footItem">
-                    <h4 class="footHead">All about <a href="#"><span>Easycalculation.com</span></a></h4>
-                    <ul>
-                        <li class="footList"><a href="#">Home</a></li>
-                        <li class="footList"><a href="#">Contact Us</a></li>
-                        <li class="footList"><a href="#">About</a></li>
-                        <li class="footList"><a href="#">Blog</a></li>
-                        <li class="footList"><a href="#">Privacy policy</a></li>
-                        <li class="footList"><a href="#">Term of usage</a></li>
-                    </ul>
-                </div>
-                <div class="footItem">
-                    <h4 class="footHead">Online accessable tools</h4>
-                    <ul>
-                        <li class="footList"><a href="#">Calculators</a></li>
-                        <li class="footList"><a href="#">Scientific calculation</a></li>
-                        <li class="footList"><a href="#">Mathmatical tools</a></li>
-                        <li class="footList"><a href="#">Finencial calculation</a></li>
-                        <li class="footList"><a href="#">Health and Fitness</a></li>
-                    </ul>
-                </div>
-                <div class="footItem">
-                    <h4 class="footHead">Get in touch</h4>
-                    <ul>
-                        <li class="footList"><a href="#">Facebook</a></li>
-                        <li class="footList"><a href="#">Twitter</a></li>
-                        <li class="footList"><a href="#">LinkedIn</a></li>
-                        <li class="footList"><a href="#">Email</a></li>
-                    </ul>
+        <div class="footbox">
+            <div class="logoBox">
+                <img id="brand" src="/image/132311731_887844135320376_6598073672727793761_n - Copy.jpg" alt="suraj">
+                <p>Suraj Patel(CEO)</p>
+                <div class="contact">
+                    <img src="/icon/email.png" alt="email" class="logo">
+                    <img src="/icon/place.png" alt="place" class="logo">
+                    <img src="/icon/phone.png" alt="phone" class="logo">
                 </div>
             </div>
-            <p class="footnot">copyright &copy; www.Easycalculation.com. All rights reserved 2022.</p>
-        </footer>
+            <div class="footItem">
+                <h4 class="footHead">All about <a href="#"><span>Easycalculation.com</span></a></h4>
+                <ul>
+                    <li class="footList"><a href="#">Home</a></li>
+                    <li class="footList"><a href="#">Contact Us</a></li>
+                    <li class="footList"><a href="#">About</a></li>
+                    <li class="footList"><a href="#">Blog</a></li>
+                    <li class="footList"><a href="#">Privacy policy</a></li>
+                    <li class="footList"><a href="#">Term of usage</a></li>
+                </ul>
+            </div>
+            <div class="footItem">
+                <h4 class="footHead">Online accessable tools</h4>
+                <ul>
+                    <li class="footList"><a href="#">Calculators</a></li>
+                    <li class="footList"><a href="#">Scientific calculation</a></li>
+                    <li class="footList"><a href="#">Mathmatical tools</a></li>
+                    <li class="footList"><a href="#">Finencial calculation</a></li>
+                    <li class="footList"><a href="#">Health and Fitness</a></li>
+                </ul>
+            </div>
+            <div class="footItem">
+                <h4 class="footHead">Get in touch</h4>
+                <ul>
+                    <li class="footList"><a href="#">Facebook</a></li>
+                    <li class="footList"><a href="#">Twitter</a></li>
+                    <li class="footList"><a href="#">LinkedIn</a></li>
+                    <li class="footList"><a href="#">Email</a></li>
+                </ul>
+            </div>
+        </div>
+        <p class="footnot">copyright &copy; www.Easycalculation.com. All rights reserved 2022.</p>
+    </footer>
 
 
 
 
 
-        <script src="/mathmaticles/percentage.js"></script>
-        <script src="/index.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
+    <script src="/mathmaticles/percentage.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
