fraction page updated

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     <ul>
                         <li class="item"><a href="/mathmaticles/percentage.html" target="_blank"> Percentage
                                 Calculator</a></li>
+                        <li class="item"><a href="/mathmaticles/fraction.html" target="_blank">Fraction calculator</a></li>
                         <li class="item"><a href="#"> Percent Error Calculator</a></li>
                         <li class="item"><a href="#"> Binary Calculator</a></li>
                         <li class="item"><a href="#"> Half-Life Calculator</a></li>
