--- a/mathmaticles/percentage.html
+++ b/mathmaticles/percentage.html
@@ -45,19 +45,20 @@
                     Percentage Calculator
                 </div>
                 <div class="card-body">
-                    <div class="main my-3">
+                    <form action="#">
+                        <div class="main my-3">
 
-                        <input type="text" class="form-control border-success col-sm-2" id="val1">
-                        <div>Percent of</div>
-                        <input type="text" class="form-control  border-success col-sm-2 " id="val2">
-                        <div>is =</div>
-                        <input type="text" class="form-control  border-success col-sm-4" id="val3">
+                            <input type="text" class="form-control border-success col-sm-2" id="val1">
+                            <div>Percent of</div>
+                            <input type="text" class="form-control  border-success col-sm-2 " id="val2">
+                            <div>is =</div>
+                            <input type="text" class="form-control  border-success col-sm-4" id="val3">
 
-                    </div>
-                    <button type="button" class="btn btn-success btn-sm" id="result">Calculate</button>
-                    <button type="button" class="btn btn-danger btn-sm" id="delete">Clear</button>
-                    <!-- <a href="#" class="btn btn-dark " id="copy1">Copy result</a> -->
-
+                        </div>
+                        <button type="button" class="btn btn-success btn-sm" id="result">Calculate</button>
+                        <button type="reset" class="btn btn-danger btn-sm" id="delete">Clear</button>
+                        <!-- <a href="#" class="btn btn-dark " id="copy1">Copy result</a> -->
+                    </form>
                 </div>
             </div>
 
@@ -68,21 +69,22 @@
                     In other terms
                 </div>
                 <div class="card-body">
-                    <div class="main my-3">
+                    <form action="#">
+                        <div class="main my-3">
 
-                        <input type="text" class="form-control  border-success col-sm-3 " id="val4">
-                        <div>is-</div>
-                        <div>what %</div>
-                        <div>of</div>
-                        <input type="text" class="form-control  border-success col-sm-3 " id="val5">
-                        <div>=</div>
-                        <input type="text" class="form-control  border-success col-sm-4" id="val6">
+                            <input type="text" class="form-control  border-success col-sm-3 " id="val4">
+                            <div>is-</div>
+                            <div>what %</div>
+                            <div>of</div>
+                            <input type="text" class="form-control  border-success col-sm-3 " id="val5">
+                            <div>=</div>
+                            <input type="text" class="form-control  border-success col-sm-4" id="val6">
 
-                    </div>
-                    <button type="button" class="btn btn-success btn-sm" id="result2">Calculate</button>
-                    <button type="button" class="btn btn-danger  btn-sm" id="delete2">Clear</button>
-                    <!-- <a href="#" class="btn btn-dark " id="copy2">Copy result</a> -->
-
+                        </div>
+                        <button type="button" class="btn btn-success btn-sm" id="result2">Calculate</button>
+                        <button type="reset" class="btn btn-danger  btn-sm" id="delete2">Clear</button>
+                        <!-- <a href="#" class="btn btn-dark " id="copy2">Copy result</a> -->
+                    </form>
 
                 </div>
             </div>
@@ -92,20 +94,21 @@
                 </div>
 
                 <div class="card-body">
+                    <form action="#">
 
-                    <div class="main my-3">
+                        <div class="main my-3">
 
-                        <input type="text" class="form-control  border-success col-sm-3" id="val7">
-                        <div>is</div>
-                        <input type="text" class="form-control  border-success col-sm-3 " id="val8">
-                        <div>% of =</div>
-                        <input type="text" class="form-control  border-success col-sm-4" id="val9">
+                            <input type="text" class="form-control  border-success col-sm-3" id="val7">
+                            <div>is</div>
+                            <input type="text" class="form-control  border-success col-sm-3 " id="val8">
+                            <div>% of =</div>
+                            <input type="text" class="form-control  border-success col-sm-4" id="val9">
 
-                    </div>
-                    <button type="button" class="btn btn-success btn-sm" id="result3">Calculate</button>
-                    <button type="button" class=" btn btn-danger  btn-sm" id="delete3">Clear</button>
-                    <!-- <a href="#" class="btn btn-dark " id="copy3">Copy result</a> -->
-
+                        </div>
+                        <button type="button" class="btn btn-success btn-sm" id="result3">Calculate</button>
+                        <button type="reset" class=" btn btn-danger  btn-sm" id="delete3">Clear</button>
+                        <!-- <a href="#" class="btn btn-dark " id="copy3">Copy result</a> -->
+                    </form>
                 </div>
             </div>
         </div>
@@ -120,7 +123,8 @@
         <object data="https://drive.google.com/file/d/1ZxNb-WpoHOvsp5QG6HPSNlSw1J3UUrDJ/view?usp=sharing"
             type="application/pdf" width="100%" height="550px">
             <p class="center">Oops! It looks like your web browser doesn't have a PDF plugin.
-                don't worry, instead you can <a href="https://drive.google.com/file/d/1ZxNb-WpoHOvsp5QG6HPSNlSw1J3UUrDJ/view?usp=sharing"
+                don't worry, instead you can <a
+                    href="https://drive.google.com/file/d/1ZxNb-WpoHOvsp5QG6HPSNlSw1J3UUrDJ/view?usp=sharing"
                     target="_blank">click here to
                     view the PDF file.</a></p>
         </object>
