--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Here you find all type of mathmatical, finencial and scientific tools
+    and calculator like mathmatical calculator, log calculator, barometer ....">
+    <meta name="keywords" content="Mathmatical Calculator, Scientific Calculator, Finencial Calculator, pdf
+    document of all related topics like math or science.">
+    <meta name="author" content="https://easycalculations.netlify.app">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Easycalculation: calculation becone easy now</title>
     <link rel="shortcut icon" href="/icon/favicon.png" type="image/x-icon">
@@ -180,9 +185,9 @@
             <div class="footItem">
                 <h4 class="footHead">Online accessable tools</h4>
                 <ul>
-                    <li class="footList"><a href="#">Calculators</a></li>
+                    <li class="footList"><a href="index.html">Calculators</a></li>
                     <li class="footList"><a href="#">Scientific calculation</a></li>
-                    <li class="footList"><a href="#">Mathmatical tools</a></li>
+                    <li class="footList"><a href="/mathmaticles/">Mathmatical tools</a></li>
                     <li class="footList"><a href="#">Finencial calculation</a></li>
                     <li class="footList"><a href="#">Health and Fitness</a></li>
                 </ul>
