--- a/mathmaticles/fraction.html
+++ b/mathmaticles/fraction.html
@@ -53,14 +53,14 @@
                 <div class="part1">
                     <div class="s1">
                         <form action="#">
-                            <input type="text" id="inp1">
+                            <input type="number" id="inp1">
 
                         </form>
                     </div>
                     <div class="linefr"></div>
                     <div class="s1">
                         <form action="#">
-                            <input type="text" id="inp2">
+                            <input type="number" id="inp2">
                         </form>
                     </div>
                 </div>
@@ -76,13 +76,13 @@
                 <div class="part1">
                     <div class="s1">
                         <form action="#"  class="calculator_fr1">
-                            <input type="text" id="inp3">
+                            <input type="number" id="inp3">
                         </form>
                     </div>
                     <div class="linefr"></div>
                     <div class="s1">
                         <form action="#"  class="calculator_fr1">
-                            <input type="text" id="inp4">
+                            <input type="number" id="inp4">
                         </form>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
                 <div class="part1">
                     <div class="s1">
                         <form action="#">
-                            <input type="text" id="inp7">
+                            <input type="number" id="inp7">
 
                         </form>
                     </div>
